--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Major Project</string>
     <string name="mobility_companies_heading">Mobility Companies</string>
     <string name="about_mobility_companies">
-        * Mobility is the industry of transporting people and goods.
-        * Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.
-        * Revenue is expected to show an annual growth rate (2023-2027) of 0.12%, resulting in a projected market volume of US$12.83bn by 2027.
+        <b>=></b> Mobility is the industry of transporting people and goods.\n
+        <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
+        <b>=></b> Revenue is expected to show an annual growth rate (2023-2027) of 0.12%, resulting in a projected market volume of US$12.83bn by 2027.
     </string>
 </resources>
