--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Major Project</string>
     <string name="mobility_companies_heading">Mobility Companies</string>
+    <string name="crm_companies_heading">CRM Companies</string>
+    <string name="cloud_companies_heading">Cloud services Companies</string>
     <string name="about_mobility_companies">
         <b>=></b> Mobility is the industry of transporting people and goods.\n
         <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
@@ -10,5 +12,13 @@
         <b>=></b> E-commerce or Electronic commerce is the trading of goods and services on the Internet.\n
         <b>=></b> The global ecommerce growth rate for 2023 is forecast at 10.4% ,bring global ecommerce sales worldwide to $6.3 trillion.\n
         <b>=></b> India is the 8th largest market for ecommerce with a predicted revenue of US$79,923.8 million by 2023.
+    </string>
+    <string name="about_crm_companies">
+        <b>=></b> A CRM company essentially provides a central place where businesses can store customer and prospect data, track customer interactions, and share this information with colleagues.\n
+        <b>=></b> They allow businesses to manage relationships with customers, helping the business to grow.\n
+    </string>
+    <string name="about_cloud_companies">
+        <b>=></b> Cloud service provider companies use their own data centers and compute resources to host cloud computing-based infrastructure and platform services for customer organizations.\n
+        <b>=></b> Cloud services are typically priced using various pay-as-you-go subscription models.
     </string>
 </resources>
