communication companies feature implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
         <b>=></b> Online collaboration tools are apps, software programs, or platforms that help businesses and their people streamline the creative process, and work together more effectively, and efficiently.
     </string>
     <string name="about_communication_companies">
-        <b>=></b>
+        <b>=></b> They provide programmable communication tools for making and receiving text messages, and performing other communication functions using its web services APIs.\n
+        <b>=></b> They are a customer engagement platform used by hundreds of thousands of businesses and more than ten million developers worldwide to build unique, personalized experiences for their customers.
     </string>
 </resources>
