--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="react_heading">React</string>
     <string name="nodejs_heading">Node JS</string>
     <string name="mongodb_heading">Mongo DB</string>
+    <string name="array_heading">Arrays</string>
     <string name="about_mobility_companies">
         <b>=></b> Mobility is the industry of transporting people and goods.\n
         <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
@@ -216,5 +217,261 @@ Step by step guide to become a AI/ML scientist.
         <b>=></b> MongoDB is a source-available cross-platform document-oriented database program.\n
         <b>=></b> It is classified as a NoSQL database program, MongoDB uses JSON-like documents with optional schemas.\n
         <b>=></b> It is a document database used to build highly available and scalable internet applications. With its flexible schema approach, it is popular with development teams using agile methodologies.
+    </string>
+    <string name="arrays_q1">Question 1:\n
+        Given an array arr[] and an integer K where K is smaller than size of array, the task is to find the Kth smallest element in the given array. It is given that all array elements are distinct.\n
+        <b>Input:</b>\n
+        N = 6\n
+        arr[] = {7 10 4 3 20 15}\n
+        K = 3\n
+        <b>Output:</b> 7\n
+        <b>Explanation:</b>\n
+        3rd smallest element in the given array is 7.\n
+    </string>
+    <string name="code_array_q1">
+        <b>C++ CODE:</b>\n
+        int kthSmallest(int arr[], int l, int r, int k) {\n
+            int n=r+1;\n
+            sort(arr,arr+n);\n
+            int count=0;\n
+            for(int i=0;i &lt; n;i++)\n
+            {\n
+                if(arr[i]>0)\n
+                {\n
+                    count++;\n
+                }\n
+                if(count==k)\n
+                {\n
+                    return arr[i];\n
+                }\n
+            }\n
+        }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution{\n
+            public static int kthSmallest(int[] arr, int l, int r, int k){\n
+                Arrays.sort(arr);\n
+                return arr[k-1];\n
+            }\n
+        }\n\n
+        <b>PYTHON CODE:</b>\n
+        class Solution:\n
+            def kthSmallest(self,arr, l, r, k):\n
+                arr.sort()\n
+                return arr[k-1]\n
+    </string>
+
+
+
+    <string name="arrays_q2">Question 2:\n
+        Given an array of size N containing only 0s, 1s, and 2s; sort the array in ascending order.\n
+        <b>Input:</b>\n
+        N = 5\n
+        arr[]= {0 2 1 2 0}\n
+        <b>Output:</b>\n
+        0 0 1 2 2\n
+        <b>Explanation:</b>\n
+        0s 1s and 2s are segregated into ascending order.\n
+    </string>
+
+    <string name="code_array_q2">
+        <b>C++ CODE:</b>\n
+        void sort012(int a[], int n){\n
+            int num0=0,num2=0;\n
+            for(int i=0;i &lt; n;i++){\n
+                if(a[i]==0) num0++;\n
+                else if(a[i]==2) num2++;\n
+            }\n
+            for(int i=0;i &lt; n  i++){\n
+                if(i>=0 &amp;&amp; i &lt; num0) a[i]=0;\n
+                else if(i>=num0 &amp;&amp; i &lt; (n-num2)) a[i]=1;\n
+                else a[i]=2;\n
+            }\n
+        }\n\n
+        <b>JAVA CODE:</b>\n
+        public static void sort012(int a[], int n){\n
+            int zero=0, one=0, two=0;\n
+            for(int i=0; i &lt; a.length; i++){\n
+                if(a[i] == 0){\n
+                    zero++;\n
+                }\n
+                else if(a[i] == 1){\n
+                    one++;\n
+                }\n
+                else{\n
+                    two++;\n
+                }\n
+            }\n
+            for(int i=0; i &lt; a.length; i++){\n
+                if(i &lt; zero){\n
+                    a[i] = 0;\n
+                }\n
+                else if(i>=zero &amp;&amp; i &lt; (one+zero)){\n
+                    a[i] = 1;\n
+                }\n
+                else{\n
+                    a[i] = 2;\n
+                }\n
+            }\n
+        }\n\n
+    </string>
+
+    <string name="arrays_q3">Question 3:\n
+        Given an unsorted array arr[] of size N having both negative and positive integers. The task is place all negative element at the end of array without changing the order of positive element and negative element.
+        <b>Input:</b>\n
+        N = 8\n
+        arr[] = {1, -1, 3, 2, -7, -5, 11, 6}\n
+        K = 3\n
+        <b>Output:</b> 1  3  2  11  6  -1  -7  -5\n
+    </string>
+    <string name="code_array_q3">
+        <b>C++ CODE:</b>\n
+        class Solution{\n
+            public:\n
+            void segregateElements(int arr[],int n){\n
+                int j=0,k=0;\n
+                int neg[n];\n
+                for(int i=0;i &lt; n;i++){\n
+                    if(arr[i] &lt; 0) neg[k++] = arr[i];\n
+                    else arr[j++] = arr[i];\n
+                }\n
+                for(int i=0;j &lt; n;j++,i++)\n
+                    arr[j] = neg[i];\n
+                }\n
+            }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution {\n
+            public void segregateElements(int arr[], int n){\n
+                if(n==0||n==1)\n
+                    return;\n
+                int[] a=new int [n];\n
+                int x=0;\n
+                for(int i=0;i&lt;n;i++){\n
+                    if(arr[i]>=0){\n
+                        a[x]=arr[i];\n
+                        x++;\n
+                    }\n
+                }\n
+                for(int i=0;i&lt;n;i++){\n
+                    if(arr[i]&lt;=0){\n
+                        a[x]=arr[i];\n
+                        x++;\n
+                    }\n
+                }\n
+                for(int i=0;i&lt;n;i++){\n
+                    arr[i]=a[i];\n
+                }\n
+            }\n
+        }\n\n
+        <b>PYTHON CODE:</b>\n
+        def segregateElements(self, arr, n):\n
+            n=len(arr)\n
+            x=[]\n
+            for i in range(n):\n
+                if arr[i]&lt;0:\n
+                    arr=arr+[arr[i]]\n
+                    x=x+[arr[i]]\n
+            for i in range(len(x)):\n
+                arr.remove(x[i])\n
+            return arr\n
+    </string>
+
+
+    <string name="arrays_q4">Question 4:\n
+        Given an unsorted array arr[] of size N having both negative and positive integers. The task is place all negative element at the end of array without changing the order of positive element and negative element.
+        <b>Input:</b>\n
+        N = 5\n
+        arr[] = {1,2,3,-2,5}\n
+        <b>Output:</b> 9\n
+        <b>Explanation:</b>\n
+        Max sub array sum is 9 of elements (1, 2, 3, -2, 5) which is a contiguous sub array.\n
+    </string>
+    <string name="code_array_q4">
+        <b>C++ CODE:</b>\n
+         long long maxSub_arraySum(int arr[], int n){\n
+            int res = arr[0];\n
+            int curr = arr[0];\n
+            for(int i=1;i &lt; n;i++){\n
+                curr = max(curr+arr[i], arr[i]);\n
+                res = max(res,curr);\n
+            }\n
+            return res;\n
+         }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution{\n
+            long maxSub_arraySum(int arr[], int n){\n
+                long max=Integer.MIN_VALUE;\n
+                long sum=0;\n
+                for(int i=0;i &lt; n;i++){\n
+                    sum+=arr[i];\n
+                    if(max &lt; sum)\n
+                    max=sum;\n
+                    //dont carry negative sum\n
+                    if(sum &lt; 0)\n
+                    sum=0;\n
+                }\n
+                return max;\n
+            }\n
+        }\n\n
+    </string>
+
+
+    <string name="arrays_q5">Question 5:\n
+        Given a sorted array of positive integers. Your task is to rearrange the array elements alternatively i.e first element should be max value, second should be min value, third should be second max, fourth should be second min and so on.\n
+        Note: Modify the original array itself. Do it without using any extra space. You do not have to return anything.
+        <b>Input:</b>\n
+        N = 6\n
+        arr[] = {1,2,3,4,5,6}\n
+        <b>Output:</b> 6 1 5 2 4 3\n
+        <b>Explanation:</b>\n
+        Max element = 6, min = 1, second max = 5, second min = 2, and so on... Modified array is : 6 1 5 2 4 3.\n
+    </string>
+    <string name="code_array_q5">
+        <b>C++ CODE:</b>\n
+         class Solution{\n
+            public:\n
+            int next (int prev, int n){\n
+                if(prev+1 > n/2) return (n-prev-1)*2;\n
+                else{\n
+                    return (prev+1)*2-1;\n
+                }\n
+            }\n
+            void arrange (int start, int n, long long *arr){\n
+                int swap_index = next(start, n);\n
+                while(arr[swap_index] > 0){\n
+                    swap(arr[swap_index], arr[start]);\n
+                    arr[swap_index] *= -1;\n
+                    swap_index = next(swap_index, n);\n
+                }\n
+            }\n
+            void rearrange(long long *arr, int n){\n
+                for(int i=0; i &lt; n; i++){\n
+                    if(arr[i] > 0)\n
+                        arrange(i, n, arr);\n
+                    }\n
+                for(int i=0; i &lt; n; i++){\n
+                    arr[i] *= -1;\n
+                }\n
+            }\n
+         }\n\n
+        <b>JAVA CODE:</b>\n
+        public static void rearrange(long arr[], int n){\n
+            int max = (int)arr[n-1] + 1;\n
+            int max_i = n-1;\n
+            int min_i = 0;\n
+            for(int i=0; i &lt; n; i++){\n
+                if(i%2 == 0){\n
+                    arr[i] = (arr[max_i]%max)*max + arr[i];\n
+                    max_i--;\n
+                }\n
+                else{\n
+                    arr[i] = (arr[min_i]%max)*max + arr[i];\n
+                    min_i++;\n
+                }\n
+            }\n
+
+            for(int i=0; i &lt; n; i++){\n
+                arr[i] = arr[i]/max;\n
+            }\n
+        }\n\n
     </string>
 </resources>
