--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="nodejs_heading">Node JS</string>
     <string name="mongodb_heading">Mongo DB</string>
     <string name="array_heading">Arrays</string>
+    <string name="bit_manipulation_heading">Bit Manipulation</string>
     <string name="about_mobility_companies">
         <b>=></b> Mobility is the industry of transporting people and goods.\n
         <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
@@ -315,7 +316,7 @@ Step by step guide to become a AI/ML scientist.
     </string>
 
     <string name="arrays_q3">Question 3:\n
-        Given an unsorted array arr[] of size N having both negative and positive integers. The task is place all negative element at the end of array without changing the order of positive element and negative element.
+        Given an unsorted array arr[] of size N having both negative and positive integers. The task is place all negative element at the end of array without changing the order of positive element and negative element.\n
         <b>Input:</b>\n
         N = 8\n
         arr[] = {1, -1, 3, 2, -7, -5, 11, 6}\n
@@ -376,7 +377,7 @@ Step by step guide to become a AI/ML scientist.
 
 
     <string name="arrays_q4">Question 4:\n
-        Given an unsorted array arr[] of size N having both negative and positive integers. The task is place all negative element at the end of array without changing the order of positive element and negative element.
+        Given an unsorted array arr[] of size N having both negative and positive integers. The task is place all negative element at the end of array without changing the order of positive element and negative element.\n
         <b>Input:</b>\n
         N = 5\n
         arr[] = {1,2,3,-2,5}\n
@@ -416,7 +417,7 @@ Step by step guide to become a AI/ML scientist.
 
     <string name="arrays_q5">Question 5:\n
         Given a sorted array of positive integers. Your task is to rearrange the array elements alternatively i.e first element should be max value, second should be min value, third should be second max, fourth should be second min and so on.\n
-        Note: Modify the original array itself. Do it without using any extra space. You do not have to return anything.
+        Note: Modify the original array itself. Do it without using any extra space. You do not have to return anything.\n
         <b>Input:</b>\n
         N = 6\n
         arr[] = {1,2,3,4,5,6}\n
@@ -471,6 +472,120 @@ Step by step guide to become a AI/ML scientist.
             for(int i=0; i &lt; n; i++){\n
                 arr[i] = arr[i]/max;\n
             }\n
+        }
+    </string>
+
+
+
+
+    <string name="bit_manipulation_q1">Question 1:\n
+        Given a non-negative integer N. The task is to check if N is a power of 2. More formally, check if N can be expressed as 2^x for some x.\n
+        <b>Input:</b>\n
+        N = 1\n
+        <b>Output:</b> YES\n
+        <b>Explanation:</b>\n
+        1 is equal to 2 raised to 0 (20 = 1).
+    </string>
+    <string name="code_bit_manipulation_q1">
+        <b>C++ CODE:</b>\n
+         bool isPowerofTwo(long long n){\n
+            if(n==0)return false;\n
+            if((n &amp; n-1)==0)return true;\n
+            return false;\n
+         }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution{\n
+            // Function to check if given number n is a power of two.\n
+            public static boolean isPowerofTwo(long n){\n
+                if(n==1){\n
+                    return true;\n
+                }\n
+                if(n==0){\n
+                    return false;\n
+                }\n
+                while(n>1){\n
+                    if(n%2!=0){\n
+                        return false;\n
+                    }\n
+                    else{\n
+                        n=n/2;\n
+                    }\n
+                }\n
+                return true;\n
+            }\n
+        }\n\n
+        <b>PYTHON CODE:</b>\n
+        def isPowerofTwo(self,n):\n
+            if n==0:\n
+                return 0\n
+            if (n &amp; (n-1))==0:\n
+                return 1\n
+            return 0
+    </string>
+
+
+
+    <string name="bit_manipulation_q2">Question 2:\n
+        You are given two numbers A and B. The task is to count the number of bits needed to be flipped to convert A to B.\n
+        <b>Input:</b>\n
+         A = 10, B = 20\n
+        <b>Output:</b> 4\n
+        <b>Explanation:</b>\n
+        A  = 10100\n
+        B  = 11001\n
+        As we can see, the bits of A that need to be flipped are 10100. If we flip these bits, we get 11001, which is B.\n
+    </string>
+    <string name="code_bit_manipulation_q2">
+        <b>C++ CODE:</b>\n
+         int countBitsFlip(int a, int b){\n
+            int i=0,cnt=0;\n
+            while(i &lt; 32){\n
+                if((a&amp;(1&lt;&lt;i))!=(b&amp;(1&lt;&lt;i)))\n
+                cnt++;\n
+                i++;\n
+            }\n
+            return cnt;\n
+         }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution{\n
+            // Function to check if given number n is a power of two.\n
+            public static int countBitsFlip(int a, int b){\n
+                int c=a^b;  // XOR will identify diff bit values\n
+                int count=0;\n
+                while(c>0){\n
+                    c&amp;=(c-1);\n
+                    count++;\n
+                }\n
+                return count;\n
+            }\n
         }\n\n
     </string>
+
+
+
+    <string name="bit_manipulation_q3">Question 3:\n
+        Given an array A containing 2*N+2 positive numbers, out of which 2*N numbers exist in pairs whereas the other two number occur exactly once and are distinct. Find the other two numbers. Return in increasing order.\n
+        <b>Input:</b>\n
+         N=2\n
+        arr[] = {1, 2, 3, 2, 1, 4}\n
+        <b>Output:</b> 3 4\n
+        <b>Explanation:</b>\n
+        3 and 4 occur exactly once.
+    </string>
+    <string name="code_bit_manipulation_q3">
+        <b>JAVA CODE:</b>\n
+        class Solution{\n
+            // Function to check if given number n is a power of two.\n
+            public static int countBitsFlip(int a, int b){\n
+                int c=a^b;  // XOR will identify diff bit values\n
+                int count=0;\n
+                while(c>0){\n
+                    c&amp;=(c-1);\n
+                    count++;\n
+                }\n
+                return count;\n
+            }\n
+        }\n\n
+    </string>
+
 </resources>
