--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="mongodb_heading">Mongo DB</string>
     <string name="array_heading">Arrays</string>
     <string name="bit_manipulation_heading">Bit Manipulation</string>
+    <string name="dynamic_programming_heading">Dynamic Programming</string>
     <string name="about_mobility_companies">
         <b>=></b> Mobility is the industry of transporting people and goods.\n
         <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
@@ -586,6 +587,137 @@ Step by step guide to become a AI/ML scientist.
                 return count;\n
             }\n
         }\n\n
+    </string>
+
+
+    <string name="dynamic_programming_q1">Question 1:\n
+        Given an integer array coins[ ] of size N representing different denominations of currency and an integer sum, find the number of ways you can make sum by using different combinations from coins[ ].
+        Note: Assume that you have an infinite supply of each type of coin. \n
+        <b>Input:</b>\n
+         sum = 4, N = 3\n
+         coins[] = {1,2,3}\n
+        <b>Output:</b> 4\n
+        <b>Explanation:</b>\n
+         Four Possible ways are: {1,1,1,1},{1,1,2},{2,2},{1,3}.\n
+    </string>
+    <string name="code_dynamic_programming_q1">
+        <b>C++ CODE:</b>\n
+         long long int count(int coins[], int n, int sum) {\n
+                long long int dp[n+1][sum+1];\n
+                for(int i=0;i&lt;=sum;i++){\n
+                    dp[0][i]=0;\n
+                }\n
+                for(int i=0;i&lt;=n;i++){\n
+                    dp[i][0]=1;\n
+                }\n
+                for(int i=1;i&lt;=n;i++){\n
+                    for(int j=1;j&lt;=sum;j++){\n
+                        if(coins[i-1]>j){\n
+                            dp[i][j]=dp[i-1][j];\n
+                        }\n
+                        else{\n
+                            dp[i][j]=dp[i][j-coins[i-1]]+dp[i-1][j];\n
+                        }\n
+                    }\n\n
+                }\n
+                return dp[n][sum];\n
+         }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution {
+            public long count(int coins[], int N, int sum) {\n
+                long dp[][]=new long[N+1][sum+1];\n
+                for(int i=N-1;i>=0;i--){\n
+                    for(int j=0;j&lt;=sum;j++){\n
+                        if(j==0){\n
+                            dp[i][j]=1;\n
+                            continue;\n
+                        }\n
+                        long x=0,y=0;\n
+                        if(j-coins[i]>=0)\n
+                        x=dp[i][j-coins[i]];\n
+                        y=dp[i+1][j];\n
+                        dp[i][j]=x+y;\n
+                    }\n
+                }\n
+                return dp[0][sum];\n
+            }\n
+        }\n\n
+        <b>PYTHON CODE:</b>\n
+        class Solution:\n
+            def count(self, coins, N, Sum):\n
+                dp=[[0 for i in range(Sum+1)]for j in range(N+1)]\n
+                for i in range(N+1):\n
+                    dp[i][0]=1\n
+                for i in range(1,N+1):\n
+                    for j in range(Sum+1):\n
+                        if coins[i-1]&lt;=j:\n
+                            dp[i][j]=dp[i][j-coins[i-1]]+dp[i-1][j]\n
+                        else:\n
+                            dp[i][j]=dp[i-1][j]\n
+                return dp[N][Sum]\n
+    </string>
+
+    <string name="dynamic_programming_q2">Question 2:\n
+        Given two sequences, find the length of longest subsequence present in both of them. Both the strings are of uppercase.\n
+        <b>Input:</b>\n
+         A = 6, B = 6\n
+         str1 = ABCDGH\n
+         str2 = AEDFHR\n
+        <b>Output:</b> 3\n
+        <b>Explanation:</b>\n
+          LCS for input Sequences ABCDGH and AEDFHR is ADH of length 3..\n
+    </string>
+    <string name="code_dynamic_programming_q2">
+        <b>C++ CODE:</b>\n
+         int solve(string s1 , string s2 , int x ,int y,vector&lt;vector&lt;int>>>&amp; dp){\n
+            if(x&lt;0 || y&lt;0) return 0;\n
+            if(dp[x][y]!=-1) return dp[x][y];\n
+            if(s1[x]==s2[y])return dp[x][y]=  1+solve(s1,s2,x-1,y-1,dp);\n
+            else return dp[x][y]=max(solve(s1,s2,x-1,y,dp),solve(s1,s2,x,y-1,dp));\n
+         }\n
+         int lcs(int x, int y, string s1, string s2){\n
+            vector&lt;vector&lt;int>> dp(x+1,vector&lt;int>(y+1,-1));\n
+            x--;\n
+            y--;\n
+            return  solve(s1,s2,x,y,dp);\n
+         }\n\n
+        <b>JAVA CODE:</b>\n
+        class Solution{\n
+            //Function to find the length of longest common subsequence in two strings.\n
+            static int lcs(int m, int n, String s1, String s2){\n
+                int [][]dp = new int[m+1][n+1];\n
+                for(int i =0; i&lt;m; i++){\n
+                    dp[i][0] =0;\n
+                }\n
+                for(int i =0; i&lt;n; i++){\n
+                    dp[0][i] =0;\n
+                }\n
+                for(int i=1; i&lt;=m; i++){\n
+                    for(int j =1;j&lt;=n;j++){\n
+                        if(s1.charAt(i-1) == s2.charAt(j-1)){\n
+                            dp[i][j] = 1+ dp[i-1][j-1];\n
+                        }\n
+                        else{\n
+                            dp[i][j] = Math.max(dp[i-1][j],dp[i][j-1]);\n
+                        }\n
+                    }\n
+                }\n
+                return dp[m][n];\n
+            }\n
+        }\n\n
+        <b>PYTHON CODE:</b>\n
+        class Solution:\n
+            #Function to find the length of longest common subsequence in two strings.\n
+            def lcs(self,n,m,text1,text2):\n
+                n,m=len(text1),len(text2)\n
+                dp=[[0 for i in range(m+1)]for j in range(n+1)]\n
+                for i in range(1,n+1):\n
+                    for j in range(1,m+1):\n
+                        if text1[i-1]==text2[j-1]:\n
+                            dp[i][j]=dp[i-1][j-1]+1\n
+                        else:\n
+                            dp[i][j]=max(dp[i-1][j],dp[i][j-1])\n
+                return dp[n][m]\n
     </string>
 
 </resources>
