--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="array_heading">Arrays</string>
     <string name="bit_manipulation_heading">Bit Manipulation</string>
     <string name="dynamic_programming_heading">Dynamic Programming</string>
+    <string name="graphs_heading">Graphs</string>
     <string name="about_mobility_companies">
         <b>=></b> Mobility is the industry of transporting people and goods.\n
         <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
@@ -718,6 +719,141 @@ Step by step guide to become a AI/ML scientist.
                         else:\n
                             dp[i][j]=max(dp[i-1][j],dp[i][j-1])\n
                 return dp[n][m]\n
+    </string>
+
+
+
+    <string name="graphs_q1">Question 1:\n
+        Detect Cycle in a Directed Graph\n\n
+        Given the root of a Directed graph, The task is to check whether the graph contains a cycle or not. \n
+        <b>Input:</b>\n
+         N = 4, E = 6\n
+         coins[] = {1,2,3}\n
+        <b>Output:</b> Yes\n
+        <b>Explanation:</b>\n
+         The diagram clearly shows a cycle 0 -> 2 -> 0\n
+    </string>
+    <string name="code_graphs_q1">
+        <b>C++ CODE:</b>\n
+        class Graph {\n
+            // No. of vertices\n
+            int V;\n
+
+            // Pointer to an array containing adjacency lists\n
+            list&lt;int>* adj;\n
+
+            // Used by isCyclic()\n
+            bool isCyclicUtil(int v, bool visited[], bool* rs);\n
+
+            public:\n
+            Graph(int V);\n
+            void addEdge(int v, int w);\n
+            bool isCyclic();\n
+        };\n
+
+        Graph::Graph(int V){\n
+            this->V = V;\n
+            adj = new list&lt;int>[V];\n
+        }\n
+
+        void Graph::addEdge(int v, int w){\n
+            // Add w to v’s list.\n
+            adj[v].push_back(w);\n
+        }\n
+
+        // DFS function to find if a cycle exists\n
+        bool Graph::isCyclicUtil(int v, bool visited[],bool* recStack){\n
+            if (visited[v] == false) {\n
+                // Mark the current node as visited\n
+                // and part of recursion stack\n\n
+                visited[v] = true;\n
+                recStack[v] = true;\n
+
+                // Recur for all the vertices adjacent to this\n
+                // vertex\n
+                list&lt;int>::iterator i;\n
+                for (i = adj[v].begin(); i != adj[v].end(); ++i) {\n
+                    if (!visited[*i] &amp;&amp; isCyclicUtil(*i, visited, recStack))\n
+                        return true;\n
+                    else if (recStack[*i])\n
+                        return true;\n
+                }\n
+            }\n
+
+            // Remove the vertex from recursion stack\n
+            recStack[v] = false;\n
+            return false;\n
+        }\n
+
+        // Returns true if the graph contains a cycle, else false\n
+        bool Graph::isCyclic(){\n
+            // Mark all the vertices as not visited\n
+            // and not part of recursion stack\n
+            bool* visited = new bool[V];\n
+            bool* recStack = new bool[V];\n
+            for (int i = 0; i &lt; V; i++) {\n
+                visited[i] = false;\n
+                recStack[i] = false;\n
+            }\n
+
+            // Call the recursive helper function\n
+            // to detect cycle in different DFS trees\n
+            for (int i = 0; i &lt; V; i++)\n
+                if (!visited[i] &amp;&amp; isCyclicUtil(i, visited, recStack))\n
+                    return true;\n
+
+            return false;\n
+        }\n
+
+        // Driver code\n
+        int main(){\n
+            // Create a graph\n
+            Graph g(4);\n
+            g.addEdge(0, 1);\n
+            g.addEdge(0, 2);\n
+            g.addEdge(1, 2);\n
+            g.addEdge(2, 0);\n
+            g.addEdge(2, 3);\n
+            g.addEdge(3, 3);\n
+
+            // Function call\n
+            if (g.isCyclic())\n
+                cout &lt;&lt; "Graph contains cycle";\n
+            else\n
+                cout &lt;&lt; "Graph doesn't contain cycle";\n
+            return 0;\n
+        }\n\n
+    </string>
+    <string name="graphs_q2">Question 2:\n
+        Detect Cycle in a Undirected Graph\n\n
+        Given an undirected graph with V vertices and E edges, check whether it contains any cycle or not. Graph is in the form of adjacency list where adj[i] contains all the nodes ith node is having edge with.\n
+        <b>Input:</b>\n
+         N = 5, E = 5\n
+         adj ={{1}, {0, 2, 4}, {1, 3}, {2, 4}, {1, 3}}\n
+        <b>Output:</b> 1\n
+        <b>Explanation:</b>\n
+         1->2->3->4->1 is a cycle.\n
+    </string>
+    <string name="code_graphs_q2">
+        <b>C++ CODE:</b>\n
+        bool dfs(int st,bool visited[],vector&lt;int>adj[],int par){\n
+            visited[st]=true;\n
+            bool isCycle=false;\n
+            for(auto child:adj[st]){\n
+                if(visited[child] &amp;&amp; child==par) continue;\n
+                if(visited[child])  return true;\n
+                isCycle|=dfs(child,visited,adj,st);\n
+            }\n
+            return isCycle;\n
+        }\n
+        bool isCycle(int v, vector&lt;int> adj[]) {\n
+            bool visited[v+10]={0};\n
+            for(int i=0;i&lt;v;i++){\n
+                if(visited[i])  continue;\n
+                    if(dfs(i,visited,adj,-1))   return true;\n
+            }\n
+            return false;\n
+        }\n\n
     </string>
 
 </resources>
